--- a/README
+++ b/README
@@ -5,28 +5,27 @@ set of wrappers for using the library from C++ and popular scripting
 languages like PHP, Perl, Python, and Tcl.
 
 Runtime requirements:
-  cygwin-1.5.24-2
+  cygwin-1.5.25-11
   libfreetype26-2.3.5-1
-  libpng12-1.2.23-1
+  libpng12-1.2.24-1
   libgif4-4.1.6-1
   zlib-1.2.3-2
 (perl-SWF)
-  perl-5.8.8-4
+  perl-5.10.0-3
 (python-ming)
-  python-2.5.1-3
+  python-2.5.2-1
 (tcl-ming)
-  tcl-8.4.16-2
+  tcl-8.4.18-1
 
 Build requirements:
 (besides corresponding -devel packages)
-  cygwin-1.5.24-2
   autoconf2.5-2.61-1
   automake1.9-1.9.6-2
   binutils-20060817-1
-  cygport-0.3.7-1
-  gawk-3.1.5-4
+  cygport-0.3.9-1
+  gawk-3.1.6-1
   gcc-core-3.4.4-3
-  libtool1.5-1.5.23a-2
+  libtool-2.2.2-2
   make-3.81-1
   pkg-config-0.21-1
   sed-4.1.5-2
@@ -125,31 +124,28 @@ Files included in the binary packages:
   /usr/share/man/man3/newSWFMovieWithVersion.3.gz
 
 (perl-SWF)
-  /etc/postinstall/ming.sh
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/SWF.pm
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/SWF/Action.pm
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/SWF/Bitmap.pm
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/SWF/Button.pm
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/SWF/Constants.pm
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/SWF/DisplayItem.pm
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/SWF/Fill.pm
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/SWF/Font.pm
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/SWF/Gradient.pm
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/SWF/Morph.pm
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/SWF/Movie.pm
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/SWF/Shape.pm
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/SWF/Sound.pm
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/SWF/SoundInstance.pm
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/SWF/SoundStream.pm
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/SWF/Sprite.pm
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/SWF/Text.pm
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/SWF/TextField.pm
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/SWF/VideoStream.pm
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/auto/SWF/.packlist
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/auto/SWF/SWF.bs
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/auto/SWF/SWF.dll
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/auto/SWF/include/perl_swf.h
-  /usr/lib/perl5/vendor_perl/5.8/cygwin/auto/SWF/libSWF.dll.a
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Action.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Bitmap.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Button.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Constants.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/DisplayItem.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Fill.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Font.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Gradient.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Morph.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Movie.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Shape.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Sound.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/SoundInstance.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/SoundStream.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Sprite.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Text.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/TextField.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/VideoStream.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/auto/SWF/.packlist
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/auto/SWF/SWF.dll
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/auto/SWF/include/perl_swf.h
   /usr/share/man/man3/SWF.3pm.gz
   /usr/share/man/man3/SWF.Action.3pm.gz
   /usr/share/man/man3/SWF.Bitmap.3pm.gz
@@ -163,7 +159,6 @@ Files included in the binary packages:
   /usr/share/man/man3/SWF.Sprite.3pm.gz
   /usr/share/man/man3/SWF.TextField.3pm.gz
   /usr/share/man/man3/SWF.VideoStream.3pm.gz
-  /usr/share/perl/cygwin-pods/5.8/ming.pod
 
 (python-ming)
   /usr/lib/python2.5/site-packages/_mingc.dll
@@ -183,6 +178,9 @@ Files included in the binary packages:
 ------------------
 
 Port Notes:
+
+----- version 0.4.0.beta5-2 -----
+Rebuilt perl bindings for perl-5.10.
 
 ----- version 0.4.0.beta5-1 -----
 Initial release for Cygwin.
