--- a/README
+++ b/README
@@ -5,29 +5,30 @@ set of wrappers for using the library from C++ and popular scripting
 languages like PHP, Perl, Python, and Tcl.
 
 Runtime requirements:
-  cygwin-1.5.25-11
-  libfreetype26-2.3.5-1
-  libpng12-1.2.24-1
-  libgif4-4.1.6-1
-  zlib-1.2.3-2
+  cygwin-1.7.0-45
+  libfreetype6-2.3.9-1
+  libgcc1-4.3.2-2
+  libpng12-1.2.35-10
+  libgif4-4.1.6-10
+  zlib0-1.2.3-10
 (perl-SWF)
-  perl-5.10.0-3
+  perl-5.10.0-5
 (python-ming)
-  python-2.5.2-1
+  python-2.5.4-10
 (tcl-ming)
-  tcl-8.4.18-1
+  tcl-8.5.6-1
 
 Build requirements:
 (besides corresponding -devel packages)
-  autoconf2.5-2.61-1
-  automake1.9-1.9.6-2
-  binutils-20060817-1
-  cygport-0.3.9-1
-  gawk-3.1.6-1
-  gcc-core-3.4.4-3
-  libtool-2.2.2-2
-  make-3.81-1
-  pkg-config-0.21-1
+  autoconf2.5-2.63-10
+  automake1.9-1.9.6-10
+  binutils-20080624-2
+  cygport-0.9.6-1
+  gawk-3.1.6-2
+  gcc4-core-4.3.2-2
+  libtool-2.2.7a-12
+  make-3.81-2
+  pkg-config-0.23b-10
   sed-4.1.5-2
 
 Canonical website:
@@ -39,20 +40,20 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack ming-0.4.0.beta5-X-src.tar.bz2
+  unpack ming-0.4.2-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./ming-0.4.0.beta5-X.cygport all
+  cygport ./ming-0.4.2-X.cygport all
 
 This will create:
-  /usr/src/libming-devel-0.4.0.beta5-X.tar.bz2
-  /usr/src/libming0-0.4.0.beta5-X.tar.bz2
-  /usr/src/ming-0.4.0.beta5-X-src.tar.bz2
-  /usr/src/ming-0.4.0.beta5-X.tar.bz2
-  /usr/src/perl-SWF-0.4.0.beta5-X.tar.bz2
-  /usr/src/python-ming-0.4.0.beta5-X.tar.bz2
-  /usr/src/tcl-ming-0.4.0.beta5-X.tar.bz2
+  /usr/src/libming-devel-0.4.2-X.tar.bz2
+  /usr/src/libming1-0.4.2-X.tar.bz2
+  /usr/src/ming-0.4.2-X-src.tar.bz2
+  /usr/src/ming-0.4.2-X.tar.bz2
+  /usr/src/perl-SWF-0.4.2-X.tar.bz2
+  /usr/src/python-ming-0.4.2-X.tar.bz2
+  /usr/src/tcl-ming-0.4.2-X.tar.bz2
 
 -------------------------------------------
 
@@ -62,6 +63,7 @@ Files included in the binary packages:
   /usr/bin/dbl2png.exe
   /usr/bin/gif2dbl.exe
   /usr/bin/gif2mask.exe
+  /usr/bin/img2swf.exe
   /usr/bin/listaction.exe
   /usr/bin/listaction_d.exe
   /usr/bin/listfdb.exe
@@ -72,32 +74,28 @@ Files included in the binary packages:
   /usr/bin/makefdb.exe
   /usr/bin/makeswf.exe
   /usr/bin/png2dbl.exe
-  /usr/bin/png2swf.exe
   /usr/bin/raw2adpcm.exe
   /usr/bin/swftocxx.exe
   /usr/bin/swftoperl.exe
   /usr/bin/swftophp.exe
   /usr/bin/swftopython.exe
   /usr/bin/swftotcl.exe
-  /usr/bin/ttftofft.exe
-  /usr/share/doc/ming-0.4.0.beta5/AUTHORS
-  /usr/share/doc/ming-0.4.0.beta5/COPYING
-  /usr/share/doc/ming-0.4.0.beta5/ChangeLog
-  /usr/share/doc/ming-0.4.0.beta5/HISTORY
-  /usr/share/doc/ming-0.4.0.beta5/INSTALL
-  /usr/share/doc/ming-0.4.0.beta5/LICENSE
-  /usr/share/doc/ming-0.4.0.beta5/NEWS
-  /usr/share/doc/ming-0.4.0.beta5/README
-  /usr/share/doc/ming-0.4.0.beta5/TODO
+  /usr/share/doc/ming/AUTHORS
+  /usr/share/doc/ming/COPYING
+  /usr/share/doc/ming/ChangeLog
+  /usr/share/doc/ming/HISTORY
+  /usr/share/doc/ming/LICENSE
+  /usr/share/doc/ming/NEWS
+  /usr/share/doc/ming/README
+  /usr/share/doc/ming/TODO
   /usr/share/man/man1/makeswf.1.gz
 
-(libming0)
-  /usr/bin/cygming-0.dll
+(libming1)
+  /usr/bin/cygming-1.dll
 
 (libming-devel)
   /usr/bin/ming-config
   /usr/include/ming.h
-  /usr/include/ming_config.h
   /usr/include/mingpp.h
   /usr/lib/libming.a
   /usr/lib/libming.dll.a
@@ -111,6 +109,10 @@ Files included in the binary packages:
   /usr/share/man/man3/Ming_setScale.3.gz
   /usr/share/man/man3/Ming_setWarnFunction.3.gz
   /usr/share/man/man3/Ming_useSWFVersion.3.gz
+  /usr/share/man/man3/SWFDisplayItem_addFilter.3.gz
+  /usr/share/man/man3/SWFDisplayItem_cacheAsBitmap.3.gz
+  /usr/share/man/man3/SWFDisplayItem_get_x.3.gz
+  /usr/share/man/man3/SWFDisplayItem_setBlendMode.3.gz
   /usr/share/man/man3/SWFMovie_add.3.gz
   /usr/share/man/man3/SWFMovie_labelFrame.3.gz
   /usr/share/man/man3/SWFMovie_namedAnchor.3.gz
@@ -119,22 +121,50 @@ Files included in the binary packages:
   /usr/share/man/man3/SWFMovie_setDimension.3.gz
   /usr/share/man/man3/SWFMovie_setNumberOfFrames.3.gz
   /usr/share/man/man3/SWFMovie_setRate.3.gz
+  /usr/share/man/man3/SWFShape_drawArc.3.gz
+  /usr/share/man/man3/SWFShape_drawCubic.3.gz
+  /usr/share/man/man3/SWFShape_drawScaledLineTo.3.gz
+  /usr/share/man/man3/SWFShape_movePenTo.3.gz
+  /usr/share/man/man3/SWFShape_moveScaledPenTo.3.gz
+  /usr/share/man/man3/SWFVideoStream_getNumFrames.3.gz
+  /usr/share/man/man3/SWFVideoStream_getVideoFrame.3.gz
+  /usr/share/man/man3/SWFVideoStream_hasAudio.3.gz
+  /usr/share/man/man3/SWFVideoStream_setDimension.3.gz
   /usr/share/man/man3/destroySWFMovie.3.gz
   /usr/share/man/man3/newSWFMovie.3.gz
   /usr/share/man/man3/newSWFMovieWithVersion.3.gz
+  /usr/share/man/man3/newSWFShapeFromBitmap.3.gz
+  /usr/share/man/man3/newSWFVideoStream.3.gz
+  /usr/share/man/man3/newSWFVideoStream_fromFile.3.gz
+  /usr/share/man/man3/newSWFVideoStream_fromInput.3.gz
 
 (perl-SWF)
   /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF.pm
   /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Action.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/BinaryData.pm
   /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Bitmap.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Blur.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/BrowserFont.pm
   /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Button.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/ButtonRecord.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/CXform.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Character.pm
   /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Constants.pm
   /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/DisplayItem.pm
   /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Fill.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Filter.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/FilterMatrix.pm
   /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Font.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/FontCharacter.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/FontCollection.pm
   /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Gradient.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/InitAction.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Matrix.pm
   /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Morph.pm
   /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Movie.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/MovieClip.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/PrebuiltClip.pm
+  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Shadow.pm
   /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Shape.pm
   /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/Sound.pm
   /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/SoundInstance.pm
@@ -145,18 +175,38 @@ Files included in the binary packages:
   /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/SWF/VideoStream.pm
   /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/auto/SWF/.packlist
   /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/auto/SWF/SWF.dll
-  /usr/lib/perl5/vendor_perl/5.10/i686-cygwin/auto/SWF/include/perl_swf.h
   /usr/share/man/man3/SWF.3pm.gz
   /usr/share/man/man3/SWF.Action.3pm.gz
+  /usr/share/man/man3/SWF.BinaryData.3pm.gz
   /usr/share/man/man3/SWF.Bitmap.3pm.gz
+  /usr/share/man/man3/SWF.Blur.3pm.gz
+  /usr/share/man/man3/SWF.BrowserFont.3pm.gz
   /usr/share/man/man3/SWF.Button.3pm.gz
+  /usr/share/man/man3/SWF.ButtonRecord.3pm.gz
+  /usr/share/man/man3/SWF.CXform.3pm.gz
+  /usr/share/man/man3/SWF.Character.3pm.gz
   /usr/share/man/man3/SWF.Constants.3pm.gz
   /usr/share/man/man3/SWF.DisplayItem.3pm.gz
+  /usr/share/man/man3/SWF.Fill.3pm.gz
+  /usr/share/man/man3/SWF.Filter.3pm.gz
+  /usr/share/man/man3/SWF.FilterMatrix.3pm.gz
+  /usr/share/man/man3/SWF.Font.3pm.gz
+  /usr/share/man/man3/SWF.FontCharacter.3pm.gz
+  /usr/share/man/man3/SWF.FontCollection.3pm.gz
+  /usr/share/man/man3/SWF.Gradient.3pm.gz
+  /usr/share/man/man3/SWF.InitAction.3pm.gz
+  /usr/share/man/man3/SWF.Matrix.3pm.gz
   /usr/share/man/man3/SWF.Morph.3pm.gz
   /usr/share/man/man3/SWF.Movie.3pm.gz
+  /usr/share/man/man3/SWF.MovieClip.3pm.gz
+  /usr/share/man/man3/SWF.PrebuiltClip.3pm.gz
+  /usr/share/man/man3/SWF.Shadow.3pm.gz
   /usr/share/man/man3/SWF.Shape.3pm.gz
   /usr/share/man/man3/SWF.Sound.3pm.gz
+  /usr/share/man/man3/SWF.SoundInstance.3pm.gz
+  /usr/share/man/man3/SWF.SoundStream.3pm.gz
   /usr/share/man/man3/SWF.Sprite.3pm.gz
+  /usr/share/man/man3/SWF.Text.3pm.gz
   /usr/share/man/man3/SWF.TextField.3pm.gz
   /usr/share/man/man3/SWF.VideoStream.3pm.gz
 
@@ -165,25 +215,22 @@ Files included in the binary packages:
   /usr/lib/python2.5/site-packages/ming.py
   /usr/lib/python2.5/site-packages/ming.pyc
   /usr/lib/python2.5/site-packages/ming.pyo
-  /usr/lib/python2.5/site-packages/mingc-0.4.0.beta5-py2.5.egg-info
+  /usr/lib/python2.5/site-packages/mingc-0.4.2-py2.5.egg-info
   /usr/lib/python2.5/site-packages/mingc.py
   /usr/lib/python2.5/site-packages/mingc.pyc
   /usr/lib/python2.5/site-packages/mingc.pyo
 
 (tcl-ming)
-  /usr/lib/tcl8.4/ming/mingc.dll
-  /usr/lib/tcl8.4/ming/mingc.la
-  /usr/lib/tcl8.4/ming/pkgIndex.tcl
+  /usr/lib/tcl8.5/ming/mingc.dll
+  /usr/lib/tcl8.5/ming/mingc.la
+  /usr/lib/tcl8.5/ming/pkgIndex.tcl
 
 ------------------
 
 Port Notes:
 
------ version 0.4.0.beta5-2 -----
-Rebuilt perl bindings for perl-5.10.
-
------ version 0.4.0.beta5-1 -----
-Initial release for Cygwin.
+----- version 0.4.2-1 -----
+Initial release for Cygwin 1.7.
 
 
 Cygwin port maintained by:
